check_bytes_3.txt
    Checking homelab_manager v0.1.0 (/Users/michal/Development/homelab_manager)
warning: unused import: `QuerySelect`
 --> src/db/devices.rs:7:27
  |
7 | use sea_orm::{QueryOrder, QuerySelect};
  |                           ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Alias` and `Expr`
 --> src/db/devices.rs:8:26
  |
8 | use sea_orm::sea_query::{Alias, Expr};
  |                          ^^^^^  ^^^^

warning: unused imports: `networks` and `services`
 --> src/integrations/mod.rs:2:37
  |
2 | use crate::entities::{integrations, services, devices, interfaces, ip_addresses, networks};
  |                                     ^^^^^^^^                                     ^^^^^^^^

warning: unused import: `ModelTrait`
 --> src/integrations/mod.rs:4:77
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                                             ^^^^^^^^^^

warning: unused import: `ipnetwork::IpNetwork`
 --> src/integrations/mod.rs:5:5
  |
5 | use ipnetwork::IpNetwork;
  |     ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/integrations/mod.rs:134:21
    |
134 |                 use std::str::FromStr;
    |                     ^^^^^^^^^^^^^^^^^

warning: unused import: `RuntimeErr`
 --> src/models/types.rs:4:67
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |                                                                   ^^^^^^^^^^

error[E0599]: `TryGetError` doesn't implement `std::fmt::Display`
  --> src/models/types.rs:26:47
   |
26 |              TryGetError::DbErr(DbErr::Type(e.to_string()))
   |                                               ^^^^^^^^^ method cannot be called on `TryGetError` due to unsatisfied trait bounds
   |
  ::: /Users/michal/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/sea-orm-1.1.19/src/error.rs:80:1
   |
80 | pub enum TryGetError {
   | -------------------- doesn't satisfy `TryGetError: ToString` or `TryGetError: std::fmt::Display`
   |
   = note: the following trait bounds were not satisfied:
           `TryGetError: std::fmt::Display`
           which is required by `TryGetError: ToString`

warning: unused import: `TryGetable`
 --> src/models/types.rs:4:15
  |
4 | use sea_orm::{TryGetable, TryGetError, Value, QueryResult, DbErr, RuntimeErr};
  |               ^^^^^^^^^^

warning: unused import: `ColumnTrait`
 --> src/integrations/mod.rs:4:51
  |
4 | use sea_orm::{ActiveModelTrait, EntityTrait, Set, ColumnTrait, QueryFilter, ModelTrait, QuerySelect};
  |                                                   ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `homelab_manager` (lib) generated 9 warnings
error: could not compile `homelab_manager` (lib) due to 1 previous error; 9 warnings emitted
